--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+@use "@angular/material" as mat;
+
+@include mat.core();
+
 @layer base {
   :root {
     --background: #ffffff;
@@ -190,19 +194,22 @@ input[type="search"]::-webkit-search-cancel-button {
   }
 }
 
+/* Navbar style and bottom background */
 .navbar-shadow {
   position: fixed;
   width: 100%;
-  box-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width))
-      var(--tw-ring-color),
-    0 8px 8px rgba(234, 54, 128, 0.5);
-  --tw-ring-color: var(--primary);
-  &:hover {
-    transition: 300ms;
-    box-shadow: var(--tw-ring-inset) 0 0 0
-        calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color),
-      0 8px 8px rgba(234, 54, 128, 0.8);
-  }
+  z-index: 50;
+}
+/*bottom line gradient*/
+.navbar-shadow::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 2px;
+  width: 100%;
+  background: linear-gradient(to right, #0a0a0a, #ea3680 50%, #0a0a0a);
+  pointer-events: none;
 }
 
 .search-shadow {
