Project moved from local setup to github

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,11 @@
+/* Tailwind */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@plugin "tailwindcss-primeui";
 
+/* Angular Material */
 @use "@angular/material" as mat;
-
 @include mat.core();
 
 @layer base {
