--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <!-- src\app\components\sidebar\sidebar.component.html -->
 
-<div class="sidebar">
+<div class="w-48 px-3 border-r-2 border-pink-800/50 flex-none min-h-full">
   <p-accordion [multiple]="true" [value]="['type', 'brand', 'price']">
     <!-- Sort -->
     <p-accordion-panel value="sort">
