--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,13 +1,18 @@
-<!-- src\app\components\sidebar\sidebar.component.html -->
+<!-- src/app/components/sidebar/sidebar.component.html -->
 
-<!-- ADJUST WIDTH WITH W-1/5 -->
-<div class="w-72 px-3 border-r-2 border-pink-800/50 flex-none min-h-full">
-  <p-accordion [multiple]="true" [value]="['type', 'brand', 'price']">
+<div class="w-full px-3 border-r-2 border-pink-800/50 flex-none min-h-full">
+  <Accordion>
     <!-- Sort -->
-    <p-accordion-panel value="sort">
-      <p-accordion-header>Sort</p-accordion-header>
-      <p-accordion-content>
-        <div *ngFor="let option of sortOptions" class="filter-option">
+    <AccordionItem>
+      <AccordionTrigger>
+        <span
+          class="transition-all duration-500 font-medium text-accent-foreground group-hover:text-primary lg:text-lg md:text-base sm:text-sm text-xs"
+        >
+          Sort
+        </span>
+      </AccordionTrigger>
+      <AccordionContent class="space-y-4">
+        <div *ngFor="let option of sortOptions">
           <input
             type="radio"
             [id]="option.value"
@@ -18,14 +23,20 @@
           />
           <label [for]="option.value">{{ option.label }}</label>
         </div>
-      </p-accordion-content>
-    </p-accordion-panel>
+      </AccordionContent>
+    </AccordionItem>
 
     <!-- Type -->
-    <p-accordion-panel value="type">
-      <p-accordion-header>Supplement</p-accordion-header>
-      <p-accordion-content>
-        <div *ngFor="let option of typeOptions" class="filter-option">
+    <AccordionItem>
+      <AccordionTrigger>
+        <span
+          class="transition-all duration-500 font-medium text-accent-foreground group-hover:text-primary lg:text-lg md:text-base sm:text-sm text-xs"
+        >
+          Supplement
+        </span>
+      </AccordionTrigger>
+      <AccordionContent class="space-y-4">
+        <div *ngFor="let option of typeOptions">
           <input
             type="checkbox"
             [id]="option.value"
@@ -34,14 +45,20 @@
           />
           <label [for]="option.value">{{ option.label }}</label>
         </div>
-      </p-accordion-content>
-    </p-accordion-panel>
+      </AccordionContent>
+    </AccordionItem>
 
     <!-- Brand -->
-    <p-accordion-panel value="brand">
-      <p-accordion-header>Brand</p-accordion-header>
-      <p-accordion-content>
-        <div *ngFor="let option of brandOptions" class="filter-option">
+    <AccordionItem>
+      <AccordionTrigger>
+        <span
+          class="transition-all duration-500 font-medium text-accent-foreground group-hover:text-primary lg:text-lg md:text-base sm:text-sm text-xs"
+        >
+          Brand
+        </span>
+      </AccordionTrigger>
+      <AccordionContent class="space-y-4">
+        <div *ngFor="let option of brandOptions">
           <input
             type="checkbox"
             [id]="option.value"
@@ -50,14 +67,20 @@
           />
           <label [for]="option.value">{{ option.label }}</label>
         </div>
-      </p-accordion-content>
-    </p-accordion-panel>
+      </AccordionContent>
+    </AccordionItem>
 
     <!-- Price -->
-    <p-accordion-panel value="price">
-      <p-accordion-header>Price</p-accordion-header>
-      <p-accordion-content>
-        <div *ngFor="let option of priceOptions" class="filter-option">
+    <AccordionItem>
+      <AccordionTrigger>
+        <span
+          class="transition-all duration-500 font-medium text-accent-foreground group-hover:text-primary lg:text-lg md:text-base sm:text-sm text-xs"
+        >
+          Price
+        </span>
+      </AccordionTrigger>
+      <AccordionContent class="space-y-4">
+        <div *ngFor="let option of priceOptions">
           <input
             type="radio"
             [id]="'price-' + option.value.join('-')"
@@ -67,48 +90,46 @@
             "
             (change)="selectPresetPrice(option.value)"
           />
-          <label [for]="'price-' + option.value.join('-')">{{
-            option.label
-          }}</label>
+          <label [for]="'price-' + option.value.join('-')">
+            {{ option.label }}
+          </label>
         </div>
 
         <!-- Custom price -->
-        <div class="filter-option">
-          <input
-            type="radio"
-            id="price-custom"
-            name="price"
-            [checked]="isCustomPrice()"
-            (change)="enableCustomPrice()"
-          />
-          <label for="price-custom">Custom</label>
+        <input
+          type="radio"
+          id="price-custom"
+          name="price"
+          [checked]="isCustomPrice()"
+          (change)="enableCustomPrice()"
+        />
+        <label for="price-custom">Custom</label>
 
-          <div *ngIf="isCustomPrice()" class="mt-4">
-            <div class="flex justify-between items-center mb-2">
-              <span>${{ priceMin() }}</span>
-              <span>${{ priceMax() }}</span>
-            </div>
-            <mat-slider
-              [min]="rangeMin"
-              [max]="rangeMax"
-              [step]="sliderStep"
-              [discrete]="true"
-              class="w-full"
-            >
-              <input
-                matSliderStartThumb
-                [(ngModel)]="filter().price.range[0]"
-                (valueChange)="onSliderChange()"
-              />
-              <input
-                matSliderEndThumb
-                [(ngModel)]="filter().price.range[1]"
-                (valueChange)="onSliderChange()"
-              />
-            </mat-slider>
+        <div *ngIf="isCustomPrice()" class="mt-4">
+          <div class="flex justify-between items-center mb-2">
+            <span>${{ priceMin() }}</span>
+            <span>${{ priceMax() }}</span>
           </div>
+          <mat-slider
+            [min]="rangeMin"
+            [max]="rangeMax"
+            [step]="sliderStep"
+            [discrete]="true"
+            class="w-full"
+          >
+            <input
+              matSliderStartThumb
+              [(ngModel)]="filter().price.range[0]"
+              (valueChange)="onSliderChange()"
+            />
+            <input
+              matSliderEndThumb
+              [(ngModel)]="filter().price.range[1]"
+              (valueChange)="onSliderChange()"
+            />
+          </mat-slider>
         </div>
-      </p-accordion-content>
-    </p-accordion-panel>
-  </p-accordion>
+      </AccordionContent>
+    </AccordionItem>
+  </Accordion>
 </div>
