--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -131,7 +131,7 @@
         }
 
         <!-- Custom price -->
-        <ul class="space-y-2 mt-2">
+        <ul class="space-y-2">
           <li class="flex items-center">
             <input
               type="radio"
