--- a/src/styles.css
+++ b/src/styles.css
@@ -190,13 +190,13 @@ input[type="search"]::-webkit-search-cancel-button {
 .underlined {
   display: inline-block;
   padding-bottom: 10px;
-  background-image: linear-gradient(#ea3680 0 0);
+  background-image: linear-gradient(#0284c7 0 0);
   background-position: 0 100%; /*OR bottom left*/
   background-size: 0% 4px;
   background-repeat: no-repeat;
   transition: background-size 0.3s, background-position 0s 0.3s; /*change after the size immediately*/
   &:hover {
-    color: var(--primary);
+    color: #0ea5e9;
     background-position: 100% 100%; /*OR bottom right*/
     background-size: 100% 4px;
   }
