--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,6 +1,8 @@
 <!-- src/app/components/sidebar/sidebar.component.html -->
 
-<div class="w-full px-3 border-r-2 border-pink-800/50 flex-none min-h-full">
+<div
+  class="flex-none w-full px-3 min-h-full border-r-2 border-pink-800/50 hover:border-pink-800"
+>
   <Accordion>
     <!-- Sort -->
     <AccordionItem value="sort" [activeIndex]="['sort']">
