HOVER BORDER NAVBAR + minor layout changes

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <!-- src/app/components/sidebar/sidebar.component.html -->
 
 <div
-  class="flex-none w-full px-3 min-h-full border-r-2 border-pink-800/50 hover:border-pink-800"
+  class="flex-none w-full px-3 min-h-full border-r-2 border-pink-800/50 hover:border-white/50"
 >
   <Accordion>
     <!-- Sort -->
