--- a/src/styles.css
+++ b/src/styles.css
@@ -217,38 +217,40 @@ input[type="search"]::-webkit-search-cancel-button {
   }
 }
 
-.navbar-shadow-old {
-  position: fixed;
-  width: 100%;
-  box-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width))
-      var(--tw-ring-color),
-    0 8px 8px rgba(234, 54, 128, 0.5); /* Bottom-only shadow */
-  --tw-ring-color: var(--primary);
-  &:hover {
-    transition: 300ms;
-    box-shadow: var(--tw-ring-inset) 0 0 0
-        calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color),
-      0 8px 8px rgba(234, 54, 128, 0.8); /* Increased intensity on hover */
-  }
-  z-index: 50;
-}
-
 /* Navbar style and bottom background */
 .navbar {
   position: fixed;
   width: 100%;
   z-index: 50;
 }
-/*bottom line gradient*/
-.navbar::after {
+/* Base gradient */
+.navbar::after,
+.navbar::before {
   content: "";
   position: absolute;
   bottom: 0;
   left: 0;
   height: 2px;
   width: 100%;
-  background: linear-gradient(to right, #0a0a0a, #ea3680 20%, #0a0a0a);
   pointer-events: none;
+  transition: opacity 200ms ease;
+}
+/* Bottom line default gradient */
+.navbar::after {
+  background: linear-gradient(to right, #0a0a0a, #ffffff 20%, #0a0a0a);
+  opacity: 1;
+}
+/* Bottom line hover gradient */
+.navbar::before {
+  background: linear-gradient(to right, #0a0a0a, #ea3680 20%, #0a0a0a);
+  opacity: 0;
+}
+/* Hover state */
+.navbar:hover::after {
+  opacity: 0;
+}
+.navbar:hover::before {
+  opacity: 1;
 }
 
 /* Searchbar shadow */
